--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Игра: Повтори последовательность</title>
     <style>
+        /* Основные стили */
         body {
             text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: #2c3e50;
+            font-family: 'Orbitron', sans-serif;
+            background: radial-gradient(ellipse, #0f0c29, #302b63, #24243e);
             color: white;
             margin: 0;
             padding: 0;
@@ -18,33 +19,43 @@
             height: 100vh;
             flex-direction: column;
         }
-      h1 {
-            font-size: 2rem;
+        h1 {
+            font-size: 2.2rem;
             font-weight: bold;
-            color: #fff;
+            color: #00ffcc;
             margin-bottom: 20px;
-      }
-      p {
+            text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
+            animation: glowText 5s infinite alternate;
+        }
+
+        p {
             font-size: 1.5rem;
             font-weight: bold;
-            color: #fff;
+            color: #00ffcc;
             margin-bottom: 10px;
-      }
+            text-shadow: 0 0 5px #00ffcc;
+        }
+
         .buttons-container {
             display: grid;
-            grid-template-columns: repeat(3, 120px);
-            gap: 15px;
-            margin-top: 20px;
+            grid-template-columns: repeat(3, 90px);
+            gap: 20px;
+            margin: 20px auto 0;
             background: rgba(255, 255, 255, 0.1);
-            padding: 25px;
+            padding: 10px;
             border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
             backdrop-filter: blur(10px);
+            box-shadow: 0 0 20px rgba(255, 0, 13, 0.5);
+            justify-content: center;
+            place-items: center;
+            max-width: 100%;
+            width: fit-content;
         }
+
         .btn {
-            width: 120px;
-            height: 120px;
-            font-size: 30px;
+            width: 90px;
+            height: 90px;
+            font-size: 20px;
             font-weight: bold;
             border-radius: 20px;
             cursor: pointer;
@@ -53,10 +64,10 @@
             position: relative;
             overflow: hidden;
             transition: transform 0.2s ease, box-shadow 0.2s ease;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            -webkit-tap-highlight-color: transparent;
-            transform-style: preserve-3d;
+            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5);
+            background: rgba(255, 255, 255, 0.1);
         }
+
         .btn::before {
             content: '';
             position: absolute;
@@ -64,23 +75,26 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(45deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
+            background: linear-gradient(45deg, rgba(0, 255, 204, 0.3), rgba(0, 255, 204, 0));
             opacity: 0;
             transition: opacity 0.3s ease;
         }
+
         .btn:hover::before {
             opacity: 1;
         }
+
         .btn:active {
-            transform: scale(0.95) translateZ(10px);
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            transform: scale(0.95);
+            box-shadow: 0 0 15px rgba(0, 255, 204, 0.8);
         }
-        .btn[data-color="red"] { background: linear-gradient(45deg, #e74c3c, #c0392b); }
-        .btn[data-color="blue"] { background: linear-gradient(45deg, #3498db, #2980b9); }
-        .btn[data-color="green"] { background: linear-gradient(45deg, #2ecc71, #27ae60); }
-        .btn[data-color="yellow"] { background: linear-gradient(45deg, #f1c40f, #f39c12); }
+
+        .btn[data-color="red"] { background: linear-gradient(45deg, #ff416c, #ff4b2b); }
+        .btn[data-color="blue"] { background: linear-gradient(45deg, #00b4db, #0083b0); }
+        .btn[data-color="green"] { background: linear-gradient(45deg, #00ffcc, #00ccaa); }
+        .btn[data-color="yellow"] { background: linear-gradient(45deg, #ffd700, #ffaa00); }
         .btn[data-color="purple"] { background: linear-gradient(45deg, #9b59b6, #8e44ad); }
-        .btn[data-color="orange"] { background: linear-gradient(45deg, #e67e22, #d35400); }
+        .btn[data-color="orange"] { background: linear-gradient(45deg, #ff7e5f, #feb47b); }
         .btn[data-color="pink"] { background: linear-gradient(45deg, #ff69b4, #e84393); }
         .btn[data-color="cyan"] { background: linear-gradient(45deg, #1abc9c, #16a085); }
         .btn[data-color="gray"] { background: linear-gradient(45deg, #95a5a6, #7f8c8d); }
@@ -90,140 +104,164 @@
         }
 
         @keyframes press {
-            0% { transform: scale(1) translateZ(0); }
-            50% { transform: scale(0.95) translateZ(10px); }
-            100% { transform: scale(1) translateZ(0); }
+            0% { transform: scale(1); }
+            50% { transform: scale(0.95); }
+            100% { transform: scale(1); }
         }
 
         @keyframes glow {
-            0% { box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); }
-            50% { box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); }
-            100% { box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); }
+            0% { box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); }
+            50% { box-shadow: 0 0 20px rgba(0, 255, 204, 0.8); }
+            100% { box-shadow: 0 0 10px rgba(0, 255, 204, 0.5); }
         }
 
-        #startBtn, #promoBtn, #levelSelectBtn, #closeAdminBtn, #addAttemptsBtn, #closePromoBtn, #submitPromoBtn {
+        @keyframes glowText {
+            0% { text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc; }
+            100% { text-shadow: 0 0 20px #00ffcc, 0 0 40px #00ffcc; }
+        }
+
+        #startBtn, #promoBtn, #levelSelectBtn, #closeAdminBtn, #addAttemptsBtn, #closePromoBtn, #submitPromoBtn, #playBtn {
             margin: 10px;
             font-size: 20px;
-            padding: 20px 20px;
+            padding: 15px 30px;
             cursor: pointer;
             border: none;
             border-radius: 15px;
-            background: linear-gradient(45deg, #3498db, #2980b9);
+            background: linear-gradient(45deg, #00755e, #018268, #00755e);
             color: white;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 10px rgba(0, 255, 204, 0.5);
             transition: transform 0.2s ease, box-shadow 0.2s ease;
-            -webkit-tap-highlight-color: transparent;
         }
-        #startBtn:active, #promoBtn:active, #levelSelectBtn:active, #closeAdminBtn:active, #addAttemptsBtn:active, #closePromoBtn:active {
+
+        #startBtn:active, #promoBtn:active, #levelSelectBtn:active, #closeAdminBtn:active, #addAttemptsBtn:active, #closePromoBtn:active, #playBtn:active {
             transform: scale(0.95);
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px rgba(0, 255, 204, 0.8);
         }
- #adminMenu, #promoMenu {
+
+        #adminMenu, #promoMenu, #difficultyMenu {
             display: none;
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: rgba(52, 73, 94, 0.9);
-            padding: 25px;
+            background: rgba(0, 0, 0, 0.9); /* Черный фон с прозрачностью */
+            padding: 70px;
             border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 0 20px rgba(0, 255, 204, 0.5);
             text-align: center;
             color: white;
-            backdrop-filter: blur(10px);
-   z-index: 999999999999;
         }
+
         #adminMenu h2, #promoMenu h2 {
             font-size: 2rem;
             margin-bottom: 15px;
-            color: white;
+            color: #00ffcc;
+            text-shadow: 0 0 10px #00ffcc;
         }
+      #difficultyMenu h2 {
+    font-size: 2rem; /* Размер шрифта */
+    font-weight: bold; /* Жирный шрифт */
+    color: #00ffcc; /* Цвет текста */
+    text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc; /* Тень текста с эффектом свечения */
+    margin-bottom: 20px; /* Отступ снизу */
+    animation: glowText 5s infinite alternate; /* Анимация свечения текста */
+    text-align: center; /* Выравнивание текста по центру */
+    letter-spacing: 2px; /* Расстояние между буквами */
+    text-transform: uppercase; /* Преобразование текста в верхний регистр */
+    font-family: 'Orbitron', sans-serif; /* Шрифт */
+    padding:500xp;            
+    background: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный фон */
+    border-radius: 10px; /* Закругленные углы */
+    box-shadow: 0 0 15px rgba(0, 255, 204, 0.5); /* Тень с эффектом свечения */
+} 
+
         #adminMenu input, #promoMenu input {
             padding: 10px;
-            border-radius: 10px;
-            border: none;
-            margin: 10px 0;
-            width: 100%;
+            font-size: 14px;
             background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
             color: white;
-            font-size: 16px;
-            -webkit-tap-highlight-color: transparent;
         }
+
         #adminMenu button, #promoMenu button {
             margin: 5px;
-            -webkit-tap-highlight-color: transparent;
+            padding: 10px 10px;
+            border-radius: 10px;
+            border: none;
+            background: linear-gradient(45deg, #00ffcc, #00ccaa);
+            color: white;
+            cursor: pointer;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
-      #adminMenu input {
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
-    margin: 10px 0;
-    width: 60%; /* Уменьшаем ширину поля ввода */
-    background: rgba(255, 255, 255, 0.1);
-    color: white;
-    font-size: 16px;
-    -webkit-tap-highlight-color: transparent;
-}
-
-#adminMenu button {
-    margin: 5px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    border: none;
-    background: linear-gradient(45deg, #3498db, #2980b9);
-    color: white;
-    cursor: pointer;
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-#adminMenu button:active {
-    transform: scale(0.95);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-#adminMenu div {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    margin-bottom: 15px;
-}
+      #difficultyMenu button {
+        margin: 5px;
+            padding: 10px 10px;
+            border-radius: 10px;
+            border: none;
+            background: linear-gradient(45deg, #00ffcc, #00ccaa);
+            color: white;
+            cursor: pointer;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+        #adminMenu button:active, #promoMenu button:active, #difficultyMenu button:active {
+            transform: scale(0.95);
+            box-shadow: 0 0 15px rgba(0, 255, 204, 0.8);
+        }
     </style>
 </head>
 <body>
-    <h1 id="levelText">Запомни и повтори последовательность</h1>
-    <div>
-        <button id="startBtn">Начать</button>
-        <button id="promoBtn">Промокоды</button>
+    <!-- Главное меню с кнопкой "Играть" -->
+    <div id="mainMenu">
+        <button id="playBtn">Играть</button>
     </div>
-    <div class="buttons-container">
-        <button class="btn" data-color="red">1</button>
-        <button class="btn" data-color="blue">2</button>
-        <button class="btn" data-color="green">3</button>
-        <button class="btn" data-color="yellow">4</button>
-        <button class="btn" data-color="purple">5</button>
-        <button class="btn" data-color="orange">6</button>
-        <button class="btn" data-color="pink">7</button>
-        <button class="btn" data-color="cyan">8</button>
-        <button class="btn" data-color="gray">9</button>
-    </div>
-    <p id="message"></p>
-    <p id="attemptsText">Попыток осталось: 3</p>
 
+    <!-- Меню выбора сложности -->
+    <div id="difficultyMenu">
+        <h2>Выберите сложность</h2>
+        <button id="easyBtn">Легко (30 уровней)</button>
+        <button id="mediumBtn">Трудно (60 уровней, x2 скорость)</button>
+        <button id="hardBtn">Хард (90 уровней, x3 скорость)</button>
+    </div>
+
+    <!-- Основная игра -->
+    <div id="gameScreen" style="display: none;">
+        <h1 id="levelText">Запомни и повтори последовательность</h1>
+        <div>
+            <button id="startBtn">Начать</button>
+        </div>
+        <div class="buttons-container">
+            <button class="btn" data-color="red">1</button>
+            <button class="btn" data-color="blue">2</button>
+            <button class="btn" data-color="green">3</button>
+            <button class="btn" data-color="yellow">4</button>
+            <button class="btn" data-color="purple">5</button>
+            <button class="btn" data-color="orange">6</button>
+            <button class="btn" data-color="pink">7</button>
+            <button class="btn" data-color="cyan">8</button>
+            <button class="btn" data-color="gray">9</button>
+        </div>
+        <p id="message"></p>
+        <p id="attemptsText">Попыток осталось: 3</p>
+    </div>
+
+    <!-- Админ-меню -->
     <div id="adminMenu">
-    <h2>Админ-меню</h2>
-    <label for="levelSelect">Выберите уровень:</label>
-    <div style="display: flex; gap: 10px; align-items: center;">
-        <input type="number" id="levelSelect" min="1" max="60" value="1">
-        <button id="levelSelectBtn">Выбрать</button>
+        <h2>Админ-меню</h2>
+        <label for="levelSelect">Выберите уровень:</label>
+        <div style="display: flex; gap: 10px; align-items: center;">
+            <input type="number" id="levelSelect" min="1" max="60" value="1">
+            <button id="levelSelectBtn">Выбрать</button>
+        </div>
+        <label for="addAttemptsInput">Количество попыток:</label>
+        <div style="display: flex; gap: 10px; align-items: center;">
+            <input type="number" id="addAttemptsInput" min="1" value="1">
+            <button id="addAttemptsBtn">Выдать попытки</button>
+        </div>
+        <button id="closeAdminBtn">Закрыть</button>
     </div>
-    <label for="addAttemptsInput">Количество попыток:</label>
-    <div style="display: flex; gap: 10px; align-items: center;">
-        <input type="number" id="addAttemptsInput" min="1" value="1">
-        <button id="addAttemptsBtn">Выдать попытки</button>
-    </div>
-    <button id="closeAdminBtn">Закрыть</button>
-</div>
 
+    <!-- Меню промокодов -->
     <div id="promoMenu">
         <h2>Введите промокод</h2>
         <input type="text" id="promoInput" placeholder="Введите промокод">
@@ -234,7 +272,6 @@
     <script>
         const buttons = document.querySelectorAll('.btn');
         const startBtn = document.getElementById('startBtn');
-        const promoBtn = document.getElementById('promoBtn');
         const message = document.getElementById('message');
         const attemptsText = document.getElementById('attemptsText');
         const adminMenu = document.getElementById('adminMenu');
@@ -248,10 +285,18 @@
         const submitPromoBtn = document.getElementById('submitPromoBtn');
         const promoInput = document.getElementById('promoInput');
         const levelText = document.getElementById('levelText');
+        const mainMenu = document.getElementById('mainMenu');
+        const difficultyMenu = document.getElementById('difficultyMenu');
+        const playBtn = document.getElementById('playBtn');
+        const easyBtn = document.getElementById('easyBtn');
+        const mediumBtn = document.getElementById('mediumBtn');
+        const hardBtn = document.getElementById('hardBtn');
+        const gameScreen = document.getElementById('gameScreen');
         let sequence = [];
         let playerSequence = [];
         let level = 1;
-        const maxLevel = 60;
+        let maxLevel = 30; // По умолчанию легкий уровень
+        let speedMultiplier = 1; // Множитель скорости
 
         // Загрузка попыток и использованных промокодов из localStorage
         let attempts = parseInt(localStorage.getItem('attempts'));
@@ -279,7 +324,8 @@
         function getRandomButton() {
             return buttons[Math.floor(Math.random() * buttons.length)];
         }
-function playSequence() {
+
+        function playSequence() {
             playerSequence = [];
             message.textContent = `Уровень ${level}`;
             let i = 0;
@@ -290,14 +336,15 @@ function playSequence() {
                 }
                 flashButton(sequence[i]);
                 i++;
-            }, 800);
+            }, 800 / speedMultiplier); // Учитываем множитель скорости
         }
 
         function flashButton(button) {
             button.classList.add('active');
-            setTimeout(() => button.classList.remove('active'), 500);
+            setTimeout(() => button.classList.remove('active'), 500 / speedMultiplier); // Учитываем множитель скорости
         }
-function startGame() {
+
+        function startGame() {
             level = 1;
             sequence = [];
             nextLevel();
@@ -305,7 +352,7 @@ function startGame() {
 
         function nextLevel() {
             if (level > maxLevel) {
-                message.textContent = 'Поздравляем! Вы прошли все уровни! Пароль: negrityan';
+                message.textContent = 'Поздравляем! Вы прошли все уровни! Пароль: negr228556';
                 return;
             }
             sequence.push(getRandomButton());
@@ -336,7 +383,8 @@ function startGame() {
                 }, 1000);
             }
         }
-function usePromoCode() {
+
+        function usePromoCode() {
             const promo = promoInput.value.trim();
             if (promoCodes[promo]) {
                 if (promoCodes[promo] === "admin") {
@@ -387,10 +435,6 @@ function usePromoCode() {
             adminMenu.style.display = 'none';
         });
 
-        promoBtn.addEventListener('click', () => {
-            promoMenu.style.display = 'block';
-        });
-
         closePromoBtn.addEventListener('click', () => {
             promoMenu.style.display = 'none';
         });
@@ -398,6 +442,40 @@ function usePromoCode() {
         submitPromoBtn.addEventListener('click', usePromoCode);
 
         startBtn.addEventListener('click', startGame);
+
+        // Обработчики для выбора сложности
+        easyBtn.addEventListener('click', () => {
+            maxLevel = 30;
+            speedMultiplier = 1;
+            difficultyMenu.style.display = 'none';
+            gameScreen.style.display = 'block'; // Показываем экран игры
+            startGame();
+        });
+
+        mediumBtn.addEventListener('click', () => {
+            maxLevel = 60;
+            speedMultiplier = 2;
+            difficultyMenu.style.display = 'none';
+            gameScreen.style.display = 'block'; // Показываем экран игры
+            startGame();
+        });
+
+        hardBtn.addEventListener('click', () => {
+            maxLevel = 90;
+            speedMultiplier = 3;
+            difficultyMenu.style.display = 'none';
+            gameScreen.style.display = 'block'; // Показываем экран игры
+            startGame();
+        });
+
+        // Открываем меню выбора сложности при нажатии на "Играть"
+        playBtn.addEventListener('click', () => {
+            mainMenu.style.display = 'none';
+            difficultyMenu.style.display = 'block';
+        });
+
+        // Показываем главное меню при загрузке страницы
+        mainMenu.style.display = 'block';
     </script>
 </body>
 </html>
